# pricing-mlops

./: .amlignore  .dockerignore  .funcignore  .gitignore  Dockerfile  README.md  function_app.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
azureml/: conda.yml  environment.yml  pricing-mlops-job.yml
configs/: azureml_auth_monitoring.yml
docs/: artifact-publishing-contract.md  auth-monitoring-configuration.md  compute-target-contract.md  data-governance.md  index.md  platform-contract.md  runbook.md
notebooks/: README.md
references/: README.md
reports/: README.md
scripts/: azure_credentials.py  deploy_auth_monitoring_batch_endpoint.sh  invoke_auth_monitoring_batch_endpoint.sh  publish_orchestrator_function.sh  register_azureml_components.sh  run_azure_ml_flow.py  run_azure_storage_flow.py  run_local_flow.py  run_model_flow_function.sh  smoke_health.py  upload_run_outputs.py  validate_inputs.py
tests/: test_architecture_boundaries.py  test_artifact_boundary_migration.py  test_artifact_config.py  test_artifact_core.py  test_artifact_sinks.py  test_auth_monitoring_contract.py  test_auth_monitoring_inputs.py  test_auth_monitoring_pipeline_component.py  test_auth_monitoring_steps.py  test_azure_storage_credentials.py  test_azureml_component_specs.py  test_azureml_python_registration.py  test_batch_endpoint.py  test_build_baseline_snapshot.py  test_build_baseline_snapshot_component.py  test_component_entrypoints.py  test_feature_engineering.py  test_feature_engineering_component.py  test_function_app.py  test_modeling_predict.py  (+11 more)
(+133 files in other folders)
