[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-mlops"
version = "0.1.0"
description = "Functional model flow template for Pricing MLOps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-functions>=1.21.0",
  "azure-identity>=1.17.0",
  "azure-storage-blob>=12.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
